--- a/template/index.html
+++ b/template/index.html
@@ -35,7 +35,7 @@
             <% _.forEach(results, function(viewports) { %>
             <% _.forEach(viewports, function(result) { %>
             <div class="title">
-                <h2 class="header"><%= result.senario.label %> - <%= result.viewport.name %></h2>
+                <h2 class="header"><%= result.scenario.label %> - <%= result.viewport.name %></h2>
                 <div class="ui message <% print((parseFloat(result.misMatchPercentage) > 0)?'negative':'positive')%>">
                     <div class="header">Mismatches for this viewport:</div>
                     <p><%= result.misMatchPercentage %>%</p>
